update_event_changes

--- a/new_event.html
+++ b/new_event.html
@@ -65,7 +65,7 @@
         </li>
         <li class="nav-item links">
           <a class="nav-link links" href="new_event.html">graffathon.</a>
-      </li>
+        </li>
       </ul>
       <ul class="navbar-nav sm-icons mr-0 cr">
 
@@ -115,14 +115,18 @@
     <div class="meraki_content" style="color: black;background-color: #ffffff;">
       <h1 style="margin-top: 50px"><b>Graffathon</b></h1>
       <h3 style="margin-top: -5px">Back to rituals</h3><br>
-      <p style="margin-top: 10px">Club Pratibimb is back again with the most awaited offline event, Graffathon to cheer your souls. <br><br>
+      <p style="margin-top: 10px">Club Pratibimb is back again with the most awaited offline event, Graffathon to cheer
+        your souls. <br><br>
 
-        Graffathon is a <b>30 hour overnight</b> wall painting event, that will drive you past the arena of street art and let your ideas and imagination flow on the sombre walls of our college as strokes of dexterity.<br><br>
-        
-        It's the time to brush up your skills, soak up your paints and get a chance to win <b>cash prizes worth 15k.</b><br><br>
+        Graffathon is a <b>30 hour overnight</b> wall painting event, that will drive you past the arena of street art
+        and let your ideas and imagination flow on the sombre walls of our college as strokes of dexterity.<br><br>
+
+        It's the time to brush up your skills, soak up your paints and get a chance to win <b>cash prizes worth
+          15k.</b><br><br>
         <br>
         Schedule: <b>5:00 PM, 11th March to 9:00 PM, 12th March 2022</b>
-        Venue: <b>Director Office Road, SGSITS</b></p>
+        Venue: <b>Director Office Road, SGSITS</b>
+      </p>
       <!-- <h6 class="web-h6">Sponsored By:</h6> -->
       <!-- <a href="https://bluepen.co.in/" class="web-link"> BLUEPEN</a> -->
     </div>
@@ -138,59 +142,71 @@
     <h2 class="text-center" style="color:#ffffff">Teaser</h2>
     <video playsinline src="GraffathonTeaser3-1.m4v" controls></video>
   </div>
-  
+
   <div class="o_videos color_change" style="background-color: #dfc5c5">
     <div class="heading">
       <h2 class="text-center" style="padding-top: 2rem; margin-bottom: 1.5rem; "><b style="color: #FFFF;">Samples</b>
       </h2>
     </div>
     <div class="kalopsia_samples">
-      <img src="img/DSC_0666 1.png" alt="">
-      <img src="img/DSC_0663 1.png" alt="">
+      <img src="img/graf_samp1.JPG" alt="" width="465px">
+      <img src="img/graf_samp2.JPG" alt="" width="450px">
+      <img class="img_graf" src="img/graf_samp3.JPG" alt="" width="470px">
       <br>
       <br>
     </div>
   </div>
   <div class="flex-container">
     <div class="rules2">
-      <h2 class="text">To be Noted.</h2>
+      <h2 class="text" style="color:black">To be Noted.</h2>
       <ul style="margin-top:-17px">
-      <li>A team wishing to register can consist of participants varying from 5-8 members. The registration cost for the same is 150 INR per team.</li>
-       <li> Event will commence in the following manner:<br> 
-             i. Registration of teams from 25/02/2022 to 05/03/2022 (5 PM IST).
-            <br> ii. Submission of artwork by each team on A-4 sized sheet,          painted, before 9th March. Artworks made, should be on one of the following themes: <br>
-                  a. Urban Art<br>
-                  b. Concept Art (Social cause)<br>
-                  c. Innovation<br>
-             iii. The selected teams will be assigned their respective walls at    5 PM, 11/03/2022.<br>
-        iv. All the required items for graffiti making will be provided to the selected teams with a payable cost of 600 INR per team. <br>
-       <li> Participants are asked to report at 4 PM, 11/03/2022. All the necessary details would be mailed to the team leader.</li>
+        <li>A team wishing to register can consist of participants varying from 5-8 members. The registration cost for
+          the same is 150 INR per team.</li>
+        <li> Event will commence in the following manner:<br>
+          i. Registration of teams from 25/02/2022 to 05/03/2022 (5 PM IST).
+          <br> ii. Submission of artwork by each team on A-4 sized sheet, painted, before 9th March. Artworks made,
+          should be on one of the following themes: <br>
+          a. Urban Art<br>
+          b. Concept Art (Social cause)<br>
+          c. Innovation<br>
+          iii. The selected teams will be assigned their respective walls at 5 PM, 11/03/2022.<br>
+          iv. All the required items for graffiti making will be provided to the selected teams with a payable cost of
+          600 INR per team. <br>
+        <li> Participants are asked to report at 4 PM, 11/03/2022. All the necessary details would be mailed to the team
+          leader.</li>
         <li>Criteria for selecting top 3 winners and 2 special mentions:</li>
         <li>Clarity of the theme to the viewers.</li>
-      <li>Creativity and originality of the artwork.</li> 
-       <li> Final decision would be based on voting and judges’ decisions. Club Pratbimb’s call would be final and non-debatable.
-        
-        </li> 
+        <li>Creativity and originality of the artwork.</li>
+        <li> Final decision would be based on voting and judges’ decisions. Club Pratbimb’s call would be final and
+          non-debatable.
+
+        </li>
       </ul>
     </div>
-    <div class="rules2" style="margin-top:100px">
-     <ul>
-     <li> Participants are required to:</li>
-      <li>The covid norms i.e., wear a face mask during the entire event duration and maintain social distancing in the arena.</li>
-    <li>Submit their vaccination certificate at the time of artwork submission(2(ii)).</li>
-  <li> If the participants wish to take advantage of Club Pratibimb’s membership, all the teammates shall have the membership ID.</li>
-<li> The registration fee is non-refundable; i.e if the artwork is not selected the money won’t be refunded to the team.</li>
-<li>  Everyone will be confined in the campus overnight and must be prepared for the same. No refreshments will be provided overnight during the event. However, food stalls will be present. </li>
-<li>  All the participants are to carry their college id cards and registration id (will be sent on WhatsApp to the team leader) and remain in the event premises throughout the event. Any sort of misconduct will not be tolerated and will result in direct elimination from the event. </li>
-<li>    Any damage to the props or college property would be heavily fined. </li>
-<li> For queries contact:</li>
-                 Shashwat Chouhan- 7024867341<br>
-                 Neeraj Agrawal- 9111607778
-     </ul>
+    <div class="rules2">
+      <ul>
+        <br>
+         <h5>Participants are required to:</h5>
+        <li>The covid norms i.e., wear a face mask during the entire event duration and maintain social distancing in
+          the arena.</li>
+        <li>Submit their vaccination certificate at the time of artwork submission(2(ii)).</li>
+        <li> If the participants wish to take advantage of Club Pratibimb’s membership, all the teammates shall have the
+          membership ID.</li>
+        <li> The registration fee is non-refundable; i.e if the artwork is not selected the money won’t be refunded to
+          the team.</li>
+        <li> Everyone will be confined in the campus overnight and must be prepared for the same. No refreshments will
+          be provided overnight during the event. However, food stalls will be present. </li>
+        <li> All the participants are to carry their college id cards and registration id (will be sent on WhatsApp to
+          the team leader) and remain in the event premises throughout the event. Any sort of misconduct will not be
+          tolerated and will result in direct elimination from the event. </li>
+        <li> Any damage to the props or college property would be heavily fined. </li>
+        <li> For queries contact:</li>
+        Shashwat Chouhan- 7024867341<br>
+        Neeraj Agrawal- 9111607778
+      </ul>
     </div>
 
   </div>
-
   <div class="flex-container">
     <div class="meraki_image ig">
       <h2 style="color:#ffffff;text-align:center;margin-top:30px"> Title sponsor</h2>
@@ -205,101 +221,101 @@
       <p>Contact-<br>8223030405<br>www.bhookbakarbaithak.com</p>
 
     </div>
-
   </div>
-  <div class="flex-container">
-    <div class="meraki_content" style="color:black ;background-color: #ffffff">
-      <p style="margin-top:130px">The in-kind sponsor of Graffathon-Back to Rituals is Hatix Rollers. It is a renowned
-        importer and supplier of different types of paint rollers, having a huge pan India customer base with an
-        exceptional quality product array.
-      </p>
-      <br>
-      <br>
-      <p>Contact-<br>9893290474<br>www.badshahrollers.com</p>
-
-    </div>
-    <div class="meraki_image ig1">
-      <h2 style="color:#ffffff;text-align:center">In-kind sponsor</h2>
-      <img src="img/HATIX LOGO 1.png" alt="" srcset="" style="margin:30px;width: 100%;
-      margin-top: 90px;">
-    </div>
-  </div>
-  <div class="flex-container">
-    <div class="meraki_image ig2">
-      <h2 style="color:#ffffff;text-align:center;margin:50px"> Prize sponsor</h2>
-      <img src="img/CH EDGE MAKERS LOGO 1.png" alt="" srcset="" style="width: 100%;
-      margin-top: 90px">
-    </div>
-    <div class="meraki_content" style="color: #ffffff;background-color: #4A4A4A;">
-      <p style="margin-top:130px">The Prize sponsor of Graffathon-Back to Rituals is CH Edgemakers- the biggest
-        organization of Central India for entrance and recruitment. It is an Indore based training institute established
-        in 1997, based on the methodology of AIM-LEARN-ACHIEVE.
-      </p>
-      <p> All the aspirants, gather! You'll get a direction to work towards achieving your goals.</p>
-      <br>
-      <p>Contact-<br> 9425061764<br>www.ch-india.com</p>
-
-    </div>
-
-  </div>
-  <div class="flex-container">
-    <div class="meraki_image ig3">
-      <img src="img/MY FM LOGO 1.png" alt="" srcset="" style="margin-top:80px;margin-left: 50px">
-    </div>
-    <div class="meraki_image ig4">
-    </div>
-  </div>
-
-  <div class="flex-xontainer footer">
-    <div class="column4 locate">
-      <img src="img/Pratibimb logo shirt.png" class="footer_logo">
-      <div><i class="fa fa-map-marker" aria-hidden="true"></i> Locate us</div>
-      <p> SGSITS 23, M.Visvesvaraya Marg Indore, Madhya Pradesh, 452003</p>
-      <p><i class="fa fa-envelope" aria-hidden="true"></i> clubpratibimb.sgsits@gmail.com</p>
-    </div>
-    <div class="column4 discover">
-      <span>Discover</span>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-      <div class="home-social-footer">
-        <a href="https://www.instagram.com/pratibimb_sgsits/?hl=en" class="home-social-icon-footer" id="insta"><i
-            class='fab fa-instagram'></i></a>
-        <a href="https://www.facebook.com/profile.php?id=100005898498460" class="home-social-icon-footer"><i
-            class='fab fa-facebook-square'></i></a>
-        <a href="https://www.linkedin.com/company/clubpratibimb" class="home-social-icon-footer"><i
-            class='fab fa-linkedin'></i></a>
+    <div class="flex-container">
+      <div class="meraki_content" style="color:black ;background-color: #ffffff">
+        <p style="margin-top:130px">The in-kind sponsor of Graffathon-Back to Rituals is Hatix Rollers. It is a renowned
+          importer and supplier of different types of paint rollers, having a huge pan India customer base with an
+          exceptional quality product array.
+        </p>
+        <br>
+        <br>
+        <p>Contact-<br>9893290474<br>www.badshahrollers.com</p>
 
       </div>
+      <div class="meraki_image ig1">
+        <h2 style="color:#ffffff;text-align:center">In-kind sponsor</h2>
+        <img src="img/HATIX LOGO 1.png" alt="" srcset="" style="margin:0px;width: 100%;
+      margin-top: 90px;">
+      </div>
     </div>
-    <div class="column4 recent-events">
-      <span>Past Events</span>
-      <ul>
-        <li><a href="events.html">Painting Kickstarter Workshop</a></li>
-        <li><a href="events.html">Vista</a></li>
-        <li><a href="events.html">Scribble Story</a></li>
-      </ul>
+    <div class="flex-container">
+      <div class="meraki_image ig2">
+        <h2 style="color:#ffffff;text-align:center;margin:50px"> Prize sponsor</h2>
+        <img src="img/CH EDGE MAKERS LOGO 1.png" alt="" srcset="" style="width: 100%;
+      margin-top: 90px;margin-left: 35px">
+      </div>
+      <div class="meraki_content" style="color: #ffffff;background-color: #4A4A4A;">
+        <p style="margin-top:130px">The Prize sponsor of Graffathon-Back to Rituals is CH Edgemakers- the biggest
+          organization of Central India for entrance and recruitment. It is an Indore based training institute
+          established
+          in 1997, based on the methodology of AIM-LEARN-ACHIEVE.
+        </p>
+        <p> All the aspirants, gather! You'll get a direction to work towards achieving your goals.</p>
+        <br>
+        <p>Contact-<br> 9425061764<br>www.ch-india.com</p>
+
+      </div>
+
     </div>
-    <div class="column4 foru">
-      <span>For you</span>
-      <ul>
-        <li><a href="certificates.html">Certificate</a></li>
-        <li><a href="sponsorship.html">Sponsorship</a></li>
-        <li><a href="membership.html">Membership</a></li>
-
-      </ul>
+    <div class="flex-container">
+      <div class="meraki_image ig3">
+        <img class="fm_ev"src="img/MY FM LOGO 1.png" alt="" srcset="">
+      </div>
+      <div class="meraki_image ig4">
+      </div>
     </div>
 
-  </div>
+    <div class="flex-xontainer footer">
+      <div class="column4 locate">
+        <img src="img/Pratibimb logo shirt.png" class="footer_logo">
+        <div><i class="fa fa-map-marker" aria-hidden="true"></i> Locate us</div>
+        <p> SGSITS 23, M.Visvesvaraya Marg Indore, Madhya Pradesh, 452003</p>
+        <p><i class="fa fa-envelope" aria-hidden="true"></i> clubpratibimb.sgsits@gmail.com</p>
+      </div>
+      <div class="column4 discover">
+        <span>Discover</span>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+        <div class="home-social-footer">
+          <a href="https://www.instagram.com/pratibimb_sgsits/?hl=en" class="home-social-icon-footer" id="insta"><i
+              class='fab fa-instagram'></i></a>
+          <a href="https://www.facebook.com/profile.php?id=100005898498460" class="home-social-icon-footer"><i
+              class='fab fa-facebook-square'></i></a>
+          <a href="https://www.linkedin.com/company/clubpratibimb" class="home-social-icon-footer"><i
+              class='fab fa-linkedin'></i></a>
 
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
-    integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
-    crossorigin="anonymous"></script>
+        </div>
+      </div>
+      <div class="column4 recent-events">
+        <span>Past Events</span>
+        <ul>
+          <li><a href="events.html">Painting Kickstarter Workshop</a></li>
+          <li><a href="events.html">Vista</a></li>
+          <li><a href="events.html">Scribble Story</a></li>
+        </ul>
+      </div>
+      <div class="column4 foru">
+        <span>For you</span>
+        <ul>
+          <li><a href="certificates.html">Certificate</a></li>
+          <li><a href="sponsorship.html">Sponsorship</a></li>
+          <li><a href="membership.html">Membership</a></li>
+
+        </ul>
+      </div>
+
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
+      integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+      crossorigin="anonymous"></script>
 
 </body>
 
