--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   </nav>
  
   <div class="header-image">
-    <img src="img/graphathon-banner.jpeg" class="event-main-image" />
+    <img src="img/graphathon-banner.jpeg" class="event-main-image" width="100%" />
     <img src="img/Graffathon Logo.png" class="event-button3"/>
     <a href="https://forms.gle/Y9tVjWLxKMjWcyHb9">
       <img src="img/Register_uibutton.png" class="event-button" />
