--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   </nav>
  
   <div class="header-image">
-    <img src="img/pixshala.png" class="event-main-image" width="100%" />
+    <img src="img/bird3.png" class="event-main-image" width="100%" />
     <a href="pixshala.html"><img src="img/final_logo.png" class="event-button3"/></a>
     <a href="https://forms.gle/Y9tVjWLxKMjWcyHb9">
       <img src="img/Register_uibutton.png" class="event-button" />
