--- a/pixshala.html
+++ b/pixshala.html
@@ -11,56 +11,65 @@
 <body>
 
   <nav class="navbar navbar-expand-lg navbar-dark " style="background-color:#2B2929;">
-    <a class="navbar-brand" href="#"><img class="logo" src="Pratibimb logo shirt.png"></a>
+    <a class="navbar-brand" href="index.html"><img class="logo" src="img/Pratibimb logo shirt.png"></a>
     <button class="navbar-toggler cl" type="button" data-toggle="collapse" data-target="#myNavbarToggler10"
-        aria-controls="myNavbarToggler10" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+      aria-controls="myNavbarToggler10" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse cr" id="myNavbarToggler10">
-        <ul class="navbar-nav mx-auto">
-            <li class="nav-item ">
-                <a class="nav-link " href="index.html">home.</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="about.html">about.</a>
-            </li>
-            <!-- <li class="nav-item">
+      <ul class="navbar-nav mx-auto">
+        <li class="nav-item ">
+          <a class="nav-link " href="index.html">home.</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="about.html">about.</a>
+        </li>
+        <!-- <li class="nav-item">
                 <a class="nav-link" href="#">For You</a>
             </li> -->
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    for you.
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="certificates.html">Certificate</a>
-                      <a class="dropdown-item" href="sponsorship.html">Sponsorship</a>
-                      <a class="dropdown-item" href="membership.html">Membership</a>
-                    </div>
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+          aria-haspopup="true" aria-expanded="false">
+          for you.
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="certificates.html">Certificate</a>
+          <a class="dropdown-item" href="sponsorship.html">Sponsorship</a>
+          <a class="dropdown-item" href="membership.html">Membership</a>
+        </div>
 
 
 
-            <li class="nav-item">
-                <a class="nav-link" href="contact.html">contact.</a>
-            </li>
-          <li class="nav-item links">
-                <a class="nav-link links" href="eve1.html">memoirs.</a>
-            </li>
-        </ul>
-        <ul class="navbar-nav sm-icons mr-0 cr">
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">contact.</a>
+        </li>
+        <li class="nav-item links">
+          <a class="nav-link links" href="eve1.html">memoirs.</a>
+        </li>
+         <li class="nav-item links">
+          <a class="nav-link links" href="new_event.html">graffathon.</a>
+        </li>
+
+      </ul>
+      <ul class="navbar-nav sm-icons mr-0 cr">
 
 
-            <li class="nav-item">
-              <div class="yo">
-                <!-- <a class="nav-link" href="#"><i class="fab fa-facebook-f"></i></a></li> -->
-                <a class="nav-link l" href="https://www.instagram.com/pratibimb_sgsits/?hl=en"><i class="fab fa-instagram"></i></a></li>
-                <a class="nav-link l" href="https://www.linkedin.com/company/clubpratibimb"><i class='fab fa-linkedin' ></i></a></li>
-                <a class="nav-link l" href="https://www.facebook.com/profile.php?id=100005898498460"><i class="fab fa-facebook"></i></a></li>
-              </div>
-
-            
-
-        </ul>
+        <li class="nav-item">
+          <div class="yo">
+            <!-- <a class="nav-link" href="#"><i class="fab fa-facebook-f"></i></a></li> -->
+            <a class="nav-link l" href="https://www.instagram.com/pratibimb_sgsits/?hl=en"><i
+                class="fab fa-instagram"></i></a>
+        </li>
+        <a class="nav-link l" href="https://www.linkedin.com/company/clubpratibimb"><i class='fab fa-linkedin'></i></a>
+        </li>
+        <a class="nav-link l" href="https://www.facebook.com/profile.php?id=100005898498460"><i
+            class="fab fa-facebook"></i></a></li>
     </div>
-</nav>
+
+
+
+    </ul>
+    </div>
+  </nav>
 
     <div id="row_pixshala">
         <div id="text_pixshala">
