--- a/pixshala.html
+++ b/pixshala.html
@@ -73,7 +73,7 @@
 
     <div id="row_pixshala">
         <div id="text_pixshala">
-           <img src="img/final_logo.png" alt="" id="logo_pixshala" width="760px" >
+           <img src="img/final_logo-3.png" alt="" id="logo_pixshala" width="760px" >
            <p id="pixshala_para">
             PIXSHALA: Enhance The Aesthetics will be a two-day photography workshop in collaboration with Canon that will teach the fundamentals of professional camera  operation and will culminate in an exciting photography competition on the second day.
            </p> 
