--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
  
   <div class="header-image">
     <img src="img/bird3_new.png" class="event-main-image" width="100%" />
-    <a href="pixshala.html"><img src="img/final_logo_new.png" class="event-button3"/></a>
+    <a href="pixshala.html"><img src="img/final_logo-3.png" class="event-button3"/></a>
     <a href="https://forms.gle/Y9tVjWLxKMjWcyHb9">
       <img src="img/Register_uibutton.png" class="event-button" />
     </a>
