--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       <p>Walk through our aisle; take a quick tour of the experiences we create because creating is what we do best.</p>
       <h5>Moments worth experiencing.</h5>
     </div>
-    <div class="column2 upcoming" onclick='window.location.href="new_event.html"'>
+    <div class="column2 upcoming"  onclick='window.location.href="pixshala.html"'>
       <div class="upcoming-image">
         <p>Upcoming Events.</p>
       </div>
