--- a/pixshala.html
+++ b/pixshala.html
@@ -97,30 +97,30 @@
       <div id="text_rules">
         <h1 class="padding" >Rules and Regulations</h1>
         <p class="padding" >
-          1. Participants are required to register themselves for the workshop before hand through the form provided.
-        <br>
-          2. All the participants are required to reach at Golden Jubilee Auditorium the workshop on 14th October 2022 at 4:00 PM sharp. 
-        <br>
-          3. Any performance for the open mic will be auditioned by club pratibimb, onspot performances will not be entertained. 
-        <br>
-          4.All the participants are required to handle the cameras with care. 
-        <br>
-          5.Damage to the cameras will be participant's responsibility and they would have to pay for its compensation. 
-        <br>
-          6. All the participants have to reach Silveria on 10:30 AM sharp for the contest on 15th October 2022.
-        <br>
-          7. No food will be provided during the lunch break, the participants are required to bring their own refreshments.  
-        <br>
-          8. Any kind of improper behaviour will lead to direct termination from the workshop as well as the contest. 
-        <br>
-          9. Participants are required to take the photographs for the contest during the given time,  any kind of forgery or plagiarism will result in disqualification. 
-        <br>
-          10. Deadline given for the submission should be followed, and entries after the deadline will not be accepted. 
-        <br>
-          11. If the participants wish to take advantage of Club Pratibimb's membership, they shall have the Membership ID. 
-        <br>
-          12. Final result would be based on judges decision, Club Pratibimb's call would be final and non-debatable.
-        </p>
+          1. Participants are required to register themselves for the workshop before hand through the form link provided. 
+          <br>
+          2. All the participants are required to reach Golden Jubilee Auditorium for the workshop on 14th October 2022 at 4:00 PM sharp.   
+          <br>
+          3.3.Any kind of improper behaviour will lead to direct termination from the workshop as well as the contest. 
+          <br>
+          4.Participants will be provided cameras for hands on experience. They are required to handle the cameras with care. Participants will have to pay for compensation if any damage is caused.
+          <br>
+          5.All the participants have to reach Silveria on 10:30 AM sharp for the contest on 15th October 2022.
+          <br>
+          6.Participants are required to take the photographs for the contest during the given time,  any kind of forgery or plagiarism will result in disqualification.
+          <br>
+          7. Any performance for the open mic will be auditioned by club pratibimb, onspot registrations will not be entertained. 
+          <br>
+          8. Participants are required to use all the props with care, any damage to the props or college property will be heavily fined.
+          <br>
+          9. Deadline given for submission of photographs of competition should be followed, and entries after the deadline will not be accepted.
+          <br>
+          10. Cleanliness is required to be maintained, everyone is required to throw any food wrapper or any waste in the dustbins.
+          <br>
+          11. Final result would be based on judges decision, club pratibimb's call would be final and non-debatable.
+          <br>
+          12. If the participants wish to take advantage of Club Pratibimb's membership, they shall bring the membership id.
+          </p>
     </div>
    
     </div>
