--- a/new_event.html
+++ b/new_event.html
@@ -134,10 +134,10 @@
     </div>
 
   </div>
-  <div class="participate" style="background: #fff">
+<!--   <div class="participate" style="background: #fff">
     <!-- <img class="part_img" src="img/Register_uibutton.png" alt=""> -->
-    <a href="https://forms.gle/Y9tVjWLxKMjWcyHb9"><img class="part1_img" src="img/Register_uibutton.png" alt=""></a>
-  </div>
+<!--     <a href="https://forms.gle/Y9tVjWLxKMjWcyHb9"><img class="part1_img" src="img/Register_uibutton.png" alt=""></a>
+  </div> --> -->
   <div class="teaser" style="margin-top:-40px">
     <h2 class="text-center" style="color:#ffffff">Teaser</h2>
     <video playsinline src="GraffathonTeaser3-1.m4v" controls></video>
