--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   <div class="header-image">
     <img src="img/bird3_new.png" class="event-main-image" width="100%" />
     <a href="pixshala.html"><img src="img/pixshala logo transparent.png" class="event-button3"/></a>
-    <a href="https://forms.gle/Y9tVjWLxKMjWcyHb9">
+    <a href="https://docs.google.com/forms/d/1gWyXxIZzaic_J3HEYfVH8I_TuG4EENsKsxi4_FGxNOg/edit?ts=633a7904">
       <img src="img/Register_uibutton.png" class="event-button" />
     </a>
     <!--<a href="new_event.html">
