--- a/pixshala.html
+++ b/pixshala.html
@@ -78,7 +78,7 @@
 
     <div id="row_pixshala">
         <div id="text_pixshala">
-           <img src="img/final_logo-3.png" alt="" id="logo_pixshala" width="760px" >
+           <img src="img/final_logo-4.png" alt="" id="logo_pixshala" width="760px" >
            <p id="pixshala_para">
             PIXSHALA: Enhance The Aesthetics will be a two-day photography workshop in collaboration with Canon that will teach the fundamentals of professional camera  operation and will culminate in an exciting photography competition on the second day.
            </p> 
@@ -124,5 +124,57 @@
     </div>
    
     </div>
+<div class="flex-xontainer footer">
+    <div class="column4 locate">
+      <img src="img/Pratibimb logo shirt.png" class="footer_logo">
+      <div><i class="fa fa-map-marker" aria-hidden="true"></i> Locate us</div>
+      <p> SGSITS 23, M.Visvesvaraya Marg Indore, Madhya Pradesh, 452003</p>
+      <p><i class="fa fa-envelope" aria-hidden="true"></i> clubpratibimb.sgsits@gmail.com</p>
+    </div>
+    <div class="column4 discover">
+      <span>Discover</span>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+      <div class="home-social-footer">
+        <a href="https://www.instagram.com/pratibimb_sgsits/?hl=en" class="home-social-icon-footer" id="insta"><i
+            class='fab fa-instagram'></i></a>
+        <a href="https://www.facebook.com/profile.php?id=100005898498460" class="home-social-icon-footer"><i
+            class='fab fa-facebook-square'></i></a>
+        <a href="https://www.linkedin.com/company/clubpratibimb" class="home-social-icon-footer"><i
+            class='fab fa-linkedin'></i></a>
+
+      </div>
+    </div>
+    
+    <div class="column4 recent-events">
+      <span>Past Events</span>
+      <ul>
+        <li><a href="events.html">Painting Kickstarter Workshop</a></li>
+        <li><a href="events.html">Vista</a></li>
+        <li><a href="events.html">Scribble Story</a></li>
+      </ul>
+    </div>
+    <div class="column4 foru">
+      <span>For you</span>
+      <ul>
+        <li><a href="certificates.html">Certificate</a></li>
+        <li><a href="sponsorship.html">Sponsorship</a></li>
+        <li><a href="membership.html">Membership</a></li>
+
+      </ul>
+    </div>
+
+  </div>
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
+    integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+    crossorigin="anonymous"></script>
+
 </body>
 </html>
