--- a/pixshala.html
+++ b/pixshala.html
@@ -80,7 +80,7 @@
         
         <div class="col eve-right">
            <p class="content">
-            <img src="img/final_logo.png" alt="" class="heading">
+            <img src="img/final_logo-4.png" alt="" class="heading">
             <p class="para">PIXSHALA: Enhance The Aesthetics will be a two-day photography workshop in collaboration with Canon that will teach the fundamentals of professional camera  operation and will culminate in an exciting photography competition on the second day.
             </p>
             <br>
