--- a/pixshala.html
+++ b/pixshala.html
@@ -85,6 +85,9 @@
             </p>
             <br>
             <p class="dates">14th Oct - 15th Oct</p>
+            <a href="https://docs.google.com/forms/d/1gWyXxIZzaic_J3HEYfVH8I_TuG4EENsKsxi4_FGxNOg/edit?ts=633a7904">
+      <img src="img/Register_uibutton.png" class="event-button" />
+    </a>
             </p>
  
         </div>
