--- a/pixshala.html
+++ b/pixshala.html
@@ -84,9 +84,11 @@
             <p class="para">PIXSHALA: Enhance The Aesthetics will be a two-day photography workshop in collaboration with Canon that will teach the fundamentals of professional camera  operation and will culminate in an exciting photography competition on the second day.
             </p>
             <br>
-            <p class="dates">14th Oct - 15th Oct</p>
+            <p class="dates">14th Oct - 15th Oct <br>
             <a href="https://docs.google.com/forms/d/1gWyXxIZzaic_J3HEYfVH8I_TuG4EENsKsxi4_FGxNOg/edit?ts=633a7904">
       <img src="img/Register_uibutton.png" class="event-button" />
+            </p>
+            
     </a>
             </p>
  
