--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   </nav>
  
   <div class="header-image">
-    <img src="img/BANNER_CROPPED.JPG" class="event-main-image" width="100%" height="%" />
+    <img src="img/pigeon_banner.JPG" class="event-main-image" width="100%" height="%" />
     <a href="pixshala.html"><img src="img/pixshala logo transparent.png" class="event-button3"/></a>
     <br>
     <a href="https://docs.google.com/forms/d/1gWyXxIZzaic_J3HEYfVH8I_TuG4EENsKsxi4_FGxNOg/edit?ts=633a7904">
