--- a/pixshala.html
+++ b/pixshala.html
@@ -131,6 +131,22 @@
         <div class="col eve-right3">
         </div>
     </div>
+<!-- sponsor -->
+ <div class="sponsor">
+        <h4> Sponsors</h4>
+        <div>
+            
+            <img class="sps" src="img\da.png">
+            <img class="sps" src="img\canon.png">
+            <img class="sps" src="img\ctl.png">
+            <img class="sps1" src="img\pavino.png">
+        </div>
+
+    </div>
+<!-- sponsor -->
+
+
+
     
 <div class="flex-xontainer footer">
     <div class="column4 locate">
