--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
  
   <div class="header-image">
     <img src="img/cover_pratibimbweb.png" class="event-main-image" width="100%" height="%" />
-    <a href="pixshala.html"><img src="img/pixshala logo transparent.png" class="event-button3"/></a>
+<!--     <a href="pixshala.html"><img src="img/pixshala logo transparent.png" class="event-button3"/></a>
     <br>
     <a href="https://docs.google.com/forms/d/1gWyXxIZzaic_J3HEYfVH8I_TuG4EENsKsxi4_FGxNOg/edit?ts=633a7904">
       <img src="img/Register_uibutton.png" class="event-button" />
-    </a>
+    </a> -->
     <!--<a href="new_event.html">
       <img src="img/know more.png" class="event-button2" />
     </a>
