--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
  
   <div class="header-image">
     <img src="img/cover_pratibimbweb.png" class="event-main-image" width="100%" height="%" />
+    <img src="img/Pratibimb logo shirt.png" />
 <!--     <a href="pixshala.html"><img src="img/pixshala logo transparent.png" class="event-button3"/></a>
     <br>
     <a href="https://docs.google.com/forms/d/1gWyXxIZzaic_J3HEYfVH8I_TuG4EENsKsxi4_FGxNOg/edit?ts=633a7904">
